background not showing up fix

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,7 @@
 * { box-sizing: border-box; }
 
 html, body {
-    min-height: 100%;
+    min-height: 100vh;
     margin: 0;
     padding: 0;
     border: 0;
@@ -17,8 +17,8 @@ body {
 
 .image_Wrap { 
     position: relative; 
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
 }
 
 .top_Bg_Svg {
